0.25.0	UNRELEASED

 * Implement support for ``core.sharedRepository`` configuration option.
   Repository files and directories now respect shared repository permissions
   for group-writable or world-writable repositories. Affects loose objects,
   pack files, pack indexes, index files, and other git metadata files.
   (Jelmer Vernooĳ, #1804)

 * Drop support for Python 3.9. (Jelmer Vernooĳ)

 * Add support for ``git rerere`` (reuse recorded resolution) with CLI
   subcommands and porcelain functions. Supports ``rerere.enabled`` and
   ``rerere.autoupdate`` configuration. (Jelmer Vernooĳ, #1786)

 * Add support for ``git mailinfo`` command to extract patch information from
   email messages. Implements ``dulwich mailinfo`` CLI command,
   ``porcelain.mailinfo()``, and ``patch.mailinfo()`` with support for subject
   munging, -k/-b flags, --scissors, --encoding, and --message-id options.
   (Jelmer Vernooĳ, #1839)

 * Add support for column formatting. (Jelmer Vernooĳ, #1837)

 * Add ``dulwich diagnose`` command to display diagnostic information about
   the Python environment including Python version, PYTHONPATH, sys.path,
   Dulwich version, and installed dependencies with their versions.
   (Jelmer Vernooĳ, #1835)

0.24.10	2025-11-10

 * Fix compatibility with python 3.9. (Jelmer Vernooĳ, #1991)

0.24.9	2025-11-10

 * Fix passing key_filename and ssh_command parameters to SSHGitClient.
   (Saugat Pachhai)

 * Relax check to support subclasses of Urllib3HttpGitClient. Fixes
   regression from 0.24.2 where subclasses of Urllib3HttpGitClient would
   not receive the config object. (Saugat Pachhai)

 * Fix test_concurrent_ref_operations_compatibility test flakiness.
   (Jelmer Vernooĳ)

 * Fix warnings in test suite. (Jelmer Vernooĳ)

0.24.8	2025-10-29

 * Add Rust implementation of pack delta creation (create_delta). The
   implementation uses the similar crate for efficient diff computation.
   (Jelmer Vernooĳ)
